projects/rhodes.akn/dist/argocd/cilium.io.v2.CiliumNetworkPolicy.allow-intra-namespace.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in the argocd namespace.
  name: allow-intra-namespace
  namespace: argocd
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: argocd
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: argocd
